--- a/GuessGame/GuessGame.html
+++ b/GuessGame/GuessGame.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GuessGame</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-    .game {
-      margin: auto;
-      text-align: center;
-    }
-    h1 {
-      font-size: 36px;
-    }
-    .btn {
-      font-size: 18px;
-      width: 90px;
-    }
-  </style>
   <body>
-    <div class="game">
+    <section class="game">
       <h1>猜數字遊戲</h1>
       <input id="num-input" type="text" placeholder="請輸入數字" />
       <p class="message">請輸入1 ~ 100之間的數字</p>
@@ -32,7 +16,7 @@
         <button class="btn">重新開始</button>
         <button class="btn">看答案</button>
       </div>
-    </div>
+    </section>
 
     <script>
       const numInput = document.getElementById("num-input");
@@ -54,6 +38,7 @@
         let numGuess = parseInt(numInput.value);
         while (isNaN(numGuess) || numGuess >= max || numGuess <= min) {
           alert(`請正確輸入${min} ~ ${max}之間的數字`);
+          numInput.value = ``;
           return;
         }
         if (numGuess != answer) {
@@ -61,13 +46,16 @@
             min = numGuess;
             alert(`答錯囉，請輸入${min} ~ ${max}之間的數字`);
             message.innerText = `請輸入${min} ~ ${max}之間的數字`;
+            numInput.value = ``;
           } else {
             max = numGuess;
             alert(`答錯囉，請輸入${min} ~ ${max}之間的數字`);
             message.innerText = `請輸入${min} ~ ${max}之間的數字`;
+            numInput.value = ``;
           }
         } else {
-          alert(`答對了! 答案是${answer}`);
+          alert(`答對了! 答案是${answer}~ 再挑戰一次!`);
+          numInput.value = ``;
         }
       });
 
